--- a/example.env
+++ b/example.env
@@ -1,7 +1,7 @@
 APP_PORT                    =   5000
 DB_DRIVER                   =   mysql
 DB_HOST                     =   0.0.0.0
-DB_PORT                     =   3306
+DB_PORT                     =   3333
 DB_NAME                     =   todo_db
 DB_USER                     =   root
-DB_PASSWORD                 =   12345678
+DB_PASSWORD                 =   123456
