--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0",
     "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
