--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:14.8.0-alpine
 RUN npm install -g npm@6.14.7
-RUN mkdir -p /var/www/auth
+RUN mkdir -p /usr/src/app
 
-WORKDIR /var/www/auth
-COPY ./package.json package.json
-COPY ./package-lock.json package-lock.json
+WORKDIR /usr/src/app
+COPY package.json /usr/src/app/package.json
+COPY package-lock.json /usr/src/app/package-lock.json
 RUN npm i --unsafe-perm
-COPY ./ /var/www/auth/
+COPY . /usr/src/app
 
 CMD npm run start:dev
