--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -18,9 +18,9 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        location ~ ^/todo {
+        location /todo {
             rewrite ^/todo/(.*) /$1 break;
-            proxy_pass http://todo:8003;
+            proxy_pass http://todo:8003/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
